If no command-line default device is provided, fall back to reading it from preferences instead of acting as if there was no default device.

This affects only the case when the command-line flag "--use-fake-device-for-media-stream" is supplied.

BUG=693746

Review-Url: https://codereview.chromium.org/2707033003
Cr-Commit-Position: refs/heads/master@{#451995}

Former-commit-id: 2c5c012360a9213b6895ce6c79fa62f941c2bd20